<resources>
    <string name="app_name">PhotoCloud</string>
    <string name="welcome">Welcome</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading">Loading</string>
    <string name="username">Username</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="user_blocked">User blocked. Maximum number of tries exceeded. Please contact your administrator.</string>
    <string name="network_error">Network issue</string>
    <string name="signup">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="signing_up">Signing up</string>
    <string name="invalid_field">Invalid field</string>
    <string name="existing_email">There is a user with the same email. Please use another email.</string>
    <string name="register_here">Register here</string>
    <string name="not_granted_permissions">The app won\'t work without required permissions</string>
    <string name="create_album">Create new album</string>
    <string name="delete">Delete</string>
    <string name="enter_album_name">Please enter album name</string>
    <string name="album_hint">Album</string>
    <string name="input_prefill">Test</string>
    <string name="existing_album_name">There is an existing album with same name</string>
    <string name="empty_album">The album must have a title</string>
    <string name="photos">Photos</string>
    <string name="unexpected_error_title">Unexpected error</string>
    <string name="unexpected_error_description">There has been an error with the application</string>
    <string name="ok">Ok</string>
    <string name="file_provider">com.example.ricardogarcia.photocloud.fileprovider</string>
</resources>
